fix appearance of footer on mobile

--- a/css/profile.less
+++ b/css/profile.less
@@ -26,6 +26,10 @@ select, input, option, label{
 
 }
 
+option {
+  font-size: 1em!important;
+}
+
 div.tabulate {
   display: block;
   text-align: left;
